--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,68 @@ body {
   padding: 20px;
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
+header {
+  background-color: rgb(0, 0, 0);
+  padding: 20px;
 }
+
+.logo {
+  float: left;
+}
+
+.logo img {
+  height: 60px;
+  width: auto;
+}
+
+nav ul {body{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+  background-color: rgb(0, 0, 0);
+  padding: 20px;
+  position: fixed;
+}
+
+.logo {
+…}
+
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+ }
+
+
+
+nav ul li {
+  display: inline;
+  margin: 0 10px;
+}
+
+nav ul li a {
+  display: inline-block;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+nav ul li a:hover {
+  background-color: #555;
+  color: #fff;
+  border-radius: 5px;
+}
+
+nav ul li a.active {
+  background-color: rgb(145, 255, 0);
+  color: rgb(0, 0, 0);
+  border-radius: 5px;
+}
+
 
 
 .logo {
@@ -51,3 +108,22 @@ h1 {
 
 .role {
   display:
+
+
+}
+
+
+.sobre {
+  position: fixed;
+top: 130px;
+left: 350px;
+
+}
+
+
+
+.texto {
+  position: fixed;
+top: 200px;
+
+}
