--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap');
+
 body {
   background-color: black;
   color: white;
@@ -7,7 +9,8 @@ body {
 
 header {
   background-color: rgb(0, 0, 0);
-  padding: 20px;
+  padding: -10px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .logo {
@@ -26,7 +29,6 @@ nav ul {body{
 header {
   background-color: rgb(0, 0, 0);
   padding: 20px;
-  position: fixed;
 }
 
 .logo {
